// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsPort countMedianRequestsOnPeriod() should call mongo with admin filters 1`] = `
Array [
  Array [
    Array [
      Object {
        "$match": Object {
          "meta.req.url": /\\\\/\\(association\\|etablissement\\)\\\\/\\.\\{9,14\\}\\$/,
          "meta.req.user.email": Object {
            "$ne": null,
          },
          "meta.req.user.roles": Object {
            "$nin": Array [
              "admin",
            ],
          },
          "timestamp": Object {
            "$gte": 2021-12-31T00:00:00.000Z,
            "$lte": 2022-01-02T00:00:00.000Z,
          },
        },
      },
      Object {
        "$group": Object {
          "_id": "$meta.req.user.email",
          "nbOfRequest": Object {
            "$sum": 1,
          },
        },
      },
      Object {
        "$sort": Object {
          "nbOfRequest": 1,
        },
      },
    ],
  ],
]
`;

exports[`StatsPort countMedianRequestsOnPeriod() should call mongo without admin filters 1`] = `
Array [
  Array [
    Array [
      Object {
        "$match": Object {
          "meta.req.url": /\\\\/\\(association\\|etablissement\\)\\\\/\\.\\{9,14\\}\\$/,
          "meta.req.user.email": Object {
            "$ne": null,
          },
          "timestamp": Object {
            "$gte": 2021-12-31T00:00:00.000Z,
            "$lte": 2022-01-02T00:00:00.000Z,
          },
        },
      },
      Object {
        "$group": Object {
          "_id": "$meta.req.user.email",
          "nbOfRequest": Object {
            "$sum": 1,
          },
        },
      },
      Object {
        "$sort": Object {
          "nbOfRequest": 1,
        },
      },
    ],
  ],
]
`;
